Using StandartCharsets and removing UnsupportedEncodingException