@@ -16,8 +16,8 @@
 
 package io.helidon.webserver;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 
 import io.helidon.common.http.HashParameters;
 import io.helidon.common.http.Parameters;
@@ -86,22 +86,17 @@ final class UriComponent {
     }
 
     private static void decodeQueryParam(Parameters params, String param, boolean decodeNames, boolean decodeValues) {
-        try {
-            int equals = param.indexOf('=');
-            if (equals > 0) {
-                params.add((decodeNames) ? URLDecoder.decode(param.substring(0, equals), "UTF-8") : param.substring(0, equals),
-                           (decodeValues)
-                                   ? URLDecoder.decode(param.substring(equals + 1), "UTF-8")
-                                   : param.substring(equals + 1));
-            } else if (equals == 0) {
-                // no key declared, ignore
-                return;
-            } else if (!param.isEmpty()) {
-                params.add((decodeNames) ? URLDecoder.decode(param, "UTF-8") : param, "");
-            }
-        } catch (UnsupportedEncodingException ex) {
-            // This should never occur
-            throw new IllegalArgumentException("Should never occur!", ex);
+        int equals = param.indexOf('=');
+        if (equals > 0) {
+            params.add((decodeNames) ? URLDecoder.decode(param.substring(0, equals), StandardCharsets.UTF_8) : param.substring(0, equals),
+                       (decodeValues)
+                               ? URLDecoder.decode(param.substring(equals + 1), StandardCharsets.UTF_8)
+                               : param.substring(equals + 1));
+        } else if (equals == 0) {
+            // no key declared, ignore
+            return;
+        } else if (!param.isEmpty()) {
+            params.add((decodeNames) ? URLDecoder.decode(param, StandardCharsets.UTF_8) : param, "");
         }
     }
 }
